--- a/yoda_talker/index.html
+++ b/yoda_talker/index.html
@@ -5,3 +5,13 @@ title: Yoda Talker!
 <h1>{{ page.title }}</h1>
 
 <p>UNDER CONSTRUCTION</p>
+<form id="myForm" action="/action_page.php">
+  You said: <input type="text" name="fname"><br>
+  <input type="button" onclick="myFunction()" value="Submit form">
+</form>
+
+<script>
+function myFunction() {
+  document.getElementById("myForm").submit();
+}
+</script>
