--- a/yoda_talker/index.html
+++ b/yoda_talker/index.html
@@ -6,8 +6,8 @@ title: Yoda Talker!
 
 <p>UNDER CONSTRUCTION</p>
 <form id="myForm" action="/action_page.php">
-  You said: <input type="text" name="fname"><br>
-  <input type="button" onclick="myFunction()" value="Submit form">
+  You said: <input type="text" name="fname"><br><br>
+  <input type="button" onclick="myFunction()" value="Yoda says:">
 </form>
 
 <script>
