--- a/yoda_talker/index.html
+++ b/yoda_talker/index.html
@@ -6,7 +6,7 @@ title: Yoda Talker!
 
 <p>UNDER CONSTRUCTION</p>
 <form id="myForm">
-  You said: <input type="text" name="fname"><br><br>
+  If you say: <input type="text" name="fname"><br><br>
   <input type="button" onclick="loadXMLDoc()" value="Yoda says:">
 </form>
 
