--- a/yoda_talker/index.html
+++ b/yoda_talker/index.html
@@ -7,7 +7,7 @@ title: Yoda Talker!
 <p>UNDER CONSTRUCTION</p>
 <form id="myForm">
   If you say: <input type="text" name="fname"><br><br>
-  <input type="button" onclick="loadXMLDoc()" value="Yoda says:">
+  <input type="button" onclick="loadXMLDoc()" value="Then Yoda would say:">
 </form>
 
 <script>
