--- a/yoda_talker/index.html
+++ b/yoda_talker/index.html
@@ -20,7 +20,8 @@ title: Yoda Talker!
         }
         xhr.open('get', 'http://100.26.9.225/yoda', true);
         xhr.setRequestHeader('Content-Type', 'text/plain');
-        xhr.send();
+        xhr.setData
+        xhr.send("Yoda is cool");
         return xhr.response;
     }
 </script>
